Fix notebook widget metadata for GitHub rendering

--- a/hosp_admission_adversarial_fairness.ipynb
+++ b/hosp_admission_adversarial_fairness.ipynb
@@ -1330,7 +1330,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>126 rows × 1 columns</p>\n",
+              "<p>126 rows \u00d7 1 columns</p>\n",
               "</div><br><label><b>dtype:</b> object</label>"
             ]
           },
