--- a/hosp_admission_bias_analysis.ipynb
+++ b/hosp_admission_bias_analysis.ipynb
@@ -480,7 +480,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>2 rows × 114 columns</p>\n",
+              "<p>2 rows \u00d7 114 columns</p>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
@@ -1351,8 +1351,8 @@
         "}\n",
         "sample_weights = np.array([class_weight_balanced[cls] for cls in y_train])\n",
         "\n",
-        "print(f\"✓ Class weights: {class_weight_balanced}\")\n",
-        "print(f\"✓ Sample weight range: [{sample_weights.min():.2f}, {sample_weights.max():.2f}]\")\n",
+        "print(f\"\u2713 Class weights: {class_weight_balanced}\")\n",
+        "print(f\"\u2713 Sample weight range: [{sample_weights.min():.2f}, {sample_weights.max():.2f}]\")\n",
         "\n",
         "# ===== TRAIN MODEL USING SHAPLEY VIC =====\n",
         "# Use raw data (NO preprocessing) - ShapleyVIC does it internally\n",
@@ -1384,7 +1384,7 @@
         "\n",
         "# Get the processed feature names from the model\n",
         "trained_features = baseline_results.params.index.tolist()\n",
-        "print(f\"\\n✓ Trained features ({len(trained_features)}): {trained_features[:5]}...\")\n",
+        "print(f\"\\n\u2713 Trained features ({len(trained_features)}): {trained_features[:5]}...\")\n",
         "\n",
         "# Apply ShapleyVIC preprocessing to test data\n",
         "x_test_raw = dat_test[colnames].copy()\n",
@@ -1401,8 +1401,8 @@
         "# Reorder to match training\n",
         "X_test = X_test[trained_features]\n",
         "\n",
-        "print(f\"✓ X_test shape: {X_test.shape}\")\n",
-        "print(f\"✓ X_test columns match training: {list(X_test.columns) == trained_features}\")\n",
+        "print(f\"\u2713 X_test shape: {X_test.shape}\")\n",
+        "print(f\"\u2713 X_test columns match training: {list(X_test.columns) == trained_features}\")\n",
         "\n",
         "# ===== GENERATE PREDICTIONS =====\n",
         "y_pred_prob = baseline_results.predict(X_test)\n",
@@ -1415,8 +1415,8 @@
         "dat_test[\"pred_label\"] = y_pred_bin\n",
         "dat_test[\"pred_label_prob\"] = y_pred_prob\n",
         "\n",
-        "print(f\"\\n✓ Optimal threshold: {optimal_threshold:.4f}\")\n",
-        "print(f\"✓ Predictions generated: {len(y_pred_bin)}\")\n",
+        "print(f\"\\n\u2713 Optimal threshold: {optimal_threshold:.4f}\")\n",
+        "print(f\"\u2713 Predictions generated: {len(y_pred_bin)}\")\n",
         "\n",
         "# ===== VERIFY PREDICTIONS MAKE SENSE =====\n",
         "from sklearn.metrics import roc_auc_score, accuracy_score, recall_score\n",
@@ -1443,8 +1443,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✓ Class weights: {np.int64(0): np.float64(0.9494386761842959), np.int64(1): np.float64(1.0562494134293985)}\n",
-            "✓ Sample weight range: [0.95, 1.06]\n"
+            "\u2713 Class weights: {np.int64(0): np.float64(0.9494386761842959), np.int64(1): np.float64(1.0562494134293985)}\n",
+            "\u2713 Sample weight range: [0.95, 1.06]\n"
           ]
         },
         {
@@ -1467,9 +1467,9 @@
             "Converged: True\n",
             "Number of features: 16\n",
             "\n",
-            "✓ Trained features (16): ['const', 'Age', 'ESI_High risk', 'Systolic blood pressure', 'Heartrate']...\n",
-            "✓ X_test shape: (83606, 16)\n",
-            "✓ X_test columns match training: True\n"
+            "\u2713 Trained features (16): ['const', 'Age', 'ESI_High risk', 'Systolic blood pressure', 'Heartrate']...\n",
+            "\u2713 X_test shape: (83606, 16)\n",
+            "\u2713 X_test columns match training: True\n"
           ]
         },
         {
@@ -1485,8 +1485,8 @@
           "name": "stdout",
           "text": [
             "\n",
-            "✓ Optimal threshold: 0.4808\n",
-            "✓ Predictions generated: 83606\n",
+            "\u2713 Optimal threshold: 0.4808\n",
+            "\u2713 Predictions generated: 83606\n",
             "\n",
             "============================================================\n",
             "PREDICTION VERIFICATION\n",
@@ -1619,7 +1619,7 @@
         "    ref_ber = float(ref_row[\"BER\"])\n",
         "    ref_vs_ber_max_gap = abs(ref_ber - ber_max_val)\n",
         "\n",
-        "    # Build summary table (no group index here — it's a small summary)\n",
+        "    # Build summary table (no group index here \u2014 it's a small summary)\n",
         "    df_fairness_summary = pd.DataFrame({\n",
         "        \"Metric\": [\n",
         "            \"Equalized Odds (max gap, TPR or FPR)\",\n",
@@ -2705,7 +2705,7 @@
         "                fpr = fp / (fp + tn) if (fp + tn) > 0 else np.nan\n",
         "                fnr = fn / (fn + tp) if (fn + tp) > 0 else np.nan\n",
         "                results.append({\n",
-        "                    'intersection': \" × \".join(f\"{v}={val}\" for v,val in zip(comb, vals)) if r>1 else f\"{comb[0]}={vals}\",\n",
+        "                    'intersection': \" \u00d7 \".join(f\"{v}={val}\" for v,val in zip(comb, vals)) if r>1 else f\"{comb[0]}={vals}\",\n",
         "                    'n_samples': len(g),\n",
         "                    'TPR': tp / (tp + fn) if (tp + fn) > 0 else np.nan,\n",
         "                    'FPR': fp / (fp + tn) if (fp + tn) > 0 else np.nan,\n",
@@ -2831,16 +2831,16 @@
           "data": {
             "text/plain": [
               "                 intersection  n_samples     TPR     FPR     TNR     FNR  \\\n",
-              "0    race=@White × sex=Female      25052  0.7490  0.3519  0.6481  0.2510   \n",
-              "1     race=@White × sex=@Male      23457  0.8122  0.4309  0.5691  0.1878   \n",
-              "2     race=Black × sex=Female      11036  0.5758  0.1652  0.8348  0.4242   \n",
-              "3      race=Black × sex=@Male       7231  0.6503  0.2325  0.7675  0.3497   \n",
-              "4  race=Hispanic × sex=Female       3950  0.4836  0.1272  0.8728  0.5164   \n",
-              "5    race=Others × sex=Female       3251  0.6750  0.1975  0.8025  0.3250   \n",
-              "6   race=Hispanic × sex=@Male       3002  0.5822  0.1860  0.8140  0.4178   \n",
-              "7     race=Others × sex=@Male       2975  0.7288  0.2280  0.7720  0.2712   \n",
-              "8     race=Asian × sex=Female       2077  0.5789  0.1490  0.8510  0.4211   \n",
-              "9      race=Asian × sex=@Male       1575  0.6599  0.2206  0.7794  0.3401   \n",
+              "0    race=@White \u00d7 sex=Female      25052  0.7490  0.3519  0.6481  0.2510   \n",
+              "1     race=@White \u00d7 sex=@Male      23457  0.8122  0.4309  0.5691  0.1878   \n",
+              "2     race=Black \u00d7 sex=Female      11036  0.5758  0.1652  0.8348  0.4242   \n",
+              "3      race=Black \u00d7 sex=@Male       7231  0.6503  0.2325  0.7675  0.3497   \n",
+              "4  race=Hispanic \u00d7 sex=Female       3950  0.4836  0.1272  0.8728  0.5164   \n",
+              "5    race=Others \u00d7 sex=Female       3251  0.6750  0.1975  0.8025  0.3250   \n",
+              "6   race=Hispanic \u00d7 sex=@Male       3002  0.5822  0.1860  0.8140  0.4178   \n",
+              "7     race=Others \u00d7 sex=@Male       2975  0.7288  0.2280  0.7720  0.2712   \n",
+              "8     race=Asian \u00d7 sex=Female       2077  0.5789  0.1490  0.8510  0.4211   \n",
+              "9      race=Asian \u00d7 sex=@Male       1575  0.6599  0.2206  0.7794  0.3401   \n",
               "\n",
               "       SR  Accuracy     BER  \n",
               "0  0.5515    0.6988  0.3014  \n",
@@ -2889,7 +2889,7 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>race=@White × sex=Female</td>\n",
+              "      <td>race=@White \u00d7 sex=Female</td>\n",
               "      <td>25052</td>\n",
               "      <td>0.7490</td>\n",
               "      <td>0.3519</td>\n",
@@ -2901,7 +2901,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>race=@White × sex=@Male</td>\n",
+              "      <td>race=@White \u00d7 sex=@Male</td>\n",
               "      <td>23457</td>\n",
               "      <td>0.8122</td>\n",
               "      <td>0.4309</td>\n",
@@ -2913,7 +2913,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>race=Black × sex=Female</td>\n",
+              "      <td>race=Black \u00d7 sex=Female</td>\n",
               "      <td>11036</td>\n",
               "      <td>0.5758</td>\n",
               "      <td>0.1652</td>\n",
@@ -2925,7 +2925,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>race=Black × sex=@Male</td>\n",
+              "      <td>race=Black \u00d7 sex=@Male</td>\n",
               "      <td>7231</td>\n",
               "      <td>0.6503</td>\n",
               "      <td>0.2325</td>\n",
@@ -2937,7 +2937,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>race=Hispanic × sex=Female</td>\n",
+              "      <td>race=Hispanic \u00d7 sex=Female</td>\n",
               "      <td>3950</td>\n",
               "      <td>0.4836</td>\n",
               "      <td>0.1272</td>\n",
@@ -2949,7 +2949,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>race=Others × sex=Female</td>\n",
+              "      <td>race=Others \u00d7 sex=Female</td>\n",
               "      <td>3251</td>\n",
               "      <td>0.6750</td>\n",
               "      <td>0.1975</td>\n",
@@ -2961,7 +2961,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
-              "      <td>race=Hispanic × sex=@Male</td>\n",
+              "      <td>race=Hispanic \u00d7 sex=@Male</td>\n",
               "      <td>3002</td>\n",
               "      <td>0.5822</td>\n",
               "      <td>0.1860</td>\n",
@@ -2973,7 +2973,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
-              "      <td>race=Others × sex=@Male</td>\n",
+              "      <td>race=Others \u00d7 sex=@Male</td>\n",
               "      <td>2975</td>\n",
               "      <td>0.7288</td>\n",
               "      <td>0.2280</td>\n",
@@ -2985,7 +2985,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
-              "      <td>race=Asian × sex=Female</td>\n",
+              "      <td>race=Asian \u00d7 sex=Female</td>\n",
               "      <td>2077</td>\n",
               "      <td>0.5789</td>\n",
               "      <td>0.1490</td>\n",
@@ -2997,7 +2997,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
-              "      <td>race=Asian × sex=@Male</td>\n",
+              "      <td>race=Asian \u00d7 sex=@Male</td>\n",
               "      <td>1575</td>\n",
               "      <td>0.6599</td>\n",
               "      <td>0.2206</td>\n",
@@ -3174,7 +3174,7 @@
         "\n",
         "# Keep only pairwise intersections (should be all since max_intersection=2)\n",
         "race_gender_intersections = race_gender_intersections[\n",
-        "    race_gender_intersections['intersection'].str.contains('×')\n",
+        "    race_gender_intersections['intersection'].str.contains('\u00d7')\n",
         "].reset_index(drop=True)\n",
         "\n",
         "race_gender_intersections\n"
@@ -3183,7 +3183,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def intersectional_fairness_gaps(df, reference_group=\"race=@White × gender=@Male\"):\n",
+        "def intersectional_fairness_gaps(df, reference_group=\"race=@White \u00d7 gender=@Male\"):\n",
         "    \"\"\"\n",
         "    df must contain:\n",
         "    intersection, TPR, FPR, BER\n",
@@ -3192,7 +3192,7 @@
         "    # Clean data\n",
         "    working = df.dropna(subset=[\"TPR\", \"FPR\", \"BER\"]).copy()\n",
         "\n",
-        "    # Pull White × Male reference row (if it exists)\n",
+        "    # Pull White \u00d7 Male reference row (if it exists)\n",
         "    if reference_group in working[\"intersection\"].values:\n",
         "        ref_row = working[working[\"intersection\"] == reference_group].iloc[0]\n",
         "        ref_tpr = ref_row[\"TPR\"]\n",
@@ -3299,14 +3299,14 @@
           "data": {
             "text/plain": [
               "                            Metric  Min Value            Min Intersection  \\\n",
-              "0  Equalized Odds (max of TPR/FPR)     0.4836  race=Hispanic × sex=Female   \n",
-              "1          Equal Opportunity (TPR)     0.4836  race=Hispanic × sex=Female   \n",
-              "2                     BER Equality     0.2496     race=Others × sex=@Male   \n",
+              "0  Equalized Odds (max of TPR/FPR)     0.4836  race=Hispanic \u00d7 sex=Female   \n",
+              "1          Equal Opportunity (TPR)     0.4836  race=Hispanic \u00d7 sex=Female   \n",
+              "2                     BER Equality     0.2496     race=Others \u00d7 sex=@Male   \n",
               "\n",
               "  Min Type  Max Value            Max Intersection     Gap  \n",
-              "0      TPR     0.8122     race=@White × sex=@Male  0.3286  \n",
-              "1      TPR     0.8122     race=@White × sex=@Male  0.3286  \n",
-              "2      BER     0.3218  race=Hispanic × sex=Female  0.0722  "
+              "0      TPR     0.8122     race=@White \u00d7 sex=@Male  0.3286  \n",
+              "1      TPR     0.8122     race=@White \u00d7 sex=@Male  0.3286  \n",
+              "2      BER     0.3218  race=Hispanic \u00d7 sex=Female  0.0722  "
             ],
             "text/html": [
               "\n",
@@ -3343,30 +3343,30 @@
               "      <th>0</th>\n",
               "      <td>Equalized Odds (max of TPR/FPR)</td>\n",
               "      <td>0.4836</td>\n",
-              "      <td>race=Hispanic × sex=Female</td>\n",
+              "      <td>race=Hispanic \u00d7 sex=Female</td>\n",
               "      <td>TPR</td>\n",
               "      <td>0.8122</td>\n",
-              "      <td>race=@White × sex=@Male</td>\n",
+              "      <td>race=@White \u00d7 sex=@Male</td>\n",
               "      <td>0.3286</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Equal Opportunity (TPR)</td>\n",
               "      <td>0.4836</td>\n",
-              "      <td>race=Hispanic × sex=Female</td>\n",
+              "      <td>race=Hispanic \u00d7 sex=Female</td>\n",
               "      <td>TPR</td>\n",
               "      <td>0.8122</td>\n",
-              "      <td>race=@White × sex=@Male</td>\n",
+              "      <td>race=@White \u00d7 sex=@Male</td>\n",
               "      <td>0.3286</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>BER Equality</td>\n",
               "      <td>0.2496</td>\n",
-              "      <td>race=Others × sex=@Male</td>\n",
+              "      <td>race=Others \u00d7 sex=@Male</td>\n",
               "      <td>BER</td>\n",
               "      <td>0.3218</td>\n",
-              "      <td>race=Hispanic × sex=Female</td>\n",
+              "      <td>race=Hispanic \u00d7 sex=Female</td>\n",
               "      <td>0.0722</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -3601,7 +3601,7 @@
         }
       ],
       "source": [
-        "# Create Sex × Race combination\n",
+        "# Create Sex \u00d7 Race combination\n",
         "dat_train[\"Sex_Race\"] = dat_train[\"sex\"].astype(str) + \"_\" + dat_train[\"race\"].astype(str)\n",
         "\n",
         "# One-hot encode Gender_Race\n",
@@ -3629,7 +3629,7 @@
         "# Plot heatmap\n",
         "plt.figure(figsize=(16, 10))\n",
         "sns.heatmap(corr_sub, annot=True, fmt=\".2f\", cmap=\"coolwarm\", center=0)\n",
-        "plt.title(\"Correlation Between Sex × Race Combos and Features\", fontsize=14)\n",
+        "plt.title(\"Correlation Between Sex \u00d7 Race Combos and Features\", fontsize=14)\n",
         "plt.show()"
       ]
     }
