--- a/hosp_admission_dataset.ipynb
+++ b/hosp_admission_dataset.ipynb
@@ -927,7 +927,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>425087 rows × 27 columns</p>\n",
+              "<p>425087 rows \u00d7 27 columns</p>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
@@ -2951,7 +2951,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>2 rows × 114 columns</p>\n",
+              "<p>2 rows \u00d7 114 columns</p>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
@@ -4369,7 +4369,7 @@
         "    display(combo_counts)\n",
         "\n",
         "    # Bar chart\n",
-        "    combo_counts.plot(kind='bar', figsize=(12,5), title=f\"Sex × Race Combo Counts ({name})\", )\n",
+        "    combo_counts.plot(kind='bar', figsize=(12,5), title=f\"Sex \u00d7 Race Combo Counts ({name})\", )\n",
         "    plt.xticks(rotation=45)\n",
         "    plt.tight_layout()\n",
         "    plt.show()\n",
@@ -4377,7 +4377,7 @@
         "    # Stacked bar chart\n",
         "    plt.figure(figsize=(10,6))\n",
         "    dist_counts.T.plot(kind='bar', stacked=True, figsize=(10,6))\n",
-        "    plt.title(f\"Distribution of Sex × Race in {name}\")\n",
+        "    plt.title(f\"Distribution of Sex \u00d7 Race in {name}\")\n",
         "    plt.ylabel(\"Count\")\n",
         "    plt.xticks(rotation=45)\n",
         "    plt.tight_layout()\n",
